convert css to scss

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="./scss/style.css" />
   </head>
   <body>
     <!-- Forked from a template on Tutorialzine: https://tutorialzine.com/2016/06/freebie-landing-page-template-with-flexbox -->
